--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CredentialManagementActivity" >
+    tools:context=".Signup" >
 
 
     <EditText
@@ -44,7 +44,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
-        android:id="@+id/bLogin"
+        android:id="@+id/bSignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/etPassword"
