--- a/res/layout/activity_friends.xml
+++ b/res/layout/activity_friends.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
      >
 
     <ListView
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/friendsList"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:background="#00FF00"
         android:drawSelectorOnTop="false" />
 
-    <TextView
-        android:id="@android:id/empty"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FF0000"
-        android:text="No data" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
+     	<EditText
+     	    android:id="@+id/etFriend"
+     	    android:layout_width="0dp"
+     	    android:layout_height="wrap_content"
+     	    android:layout_weight="1" />
+
+     	<Button
+     	    android:id="@+id/bAddFriend"
+     	    android:layout_width="wrap_content"
+     	    android:layout_height="wrap_content"
+     	    android:text="Add Friend" />
+
+    </LinearLayout>
+    
 </LinearLayout>
