--- a/res/layout/activity_friends.xml
+++ b/res/layout/activity_friends.xml
@@ -24,7 +24,9 @@
      	    android:id="@+id/etFriend"
      	    android:layout_width="0dp"
      	    android:layout_height="wrap_content"
-     	    android:layout_weight="1" />
+     	    android:layout_weight="1"
+     	    android:inputType="text"
+     	    android:singleLine="true" />
 
      	<Button
      	    android:id="@+id/bAddFriend"
