--- a/res/layout/activity_notifications.xml
+++ b/res/layout/activity_notifications.xml
@@ -9,13 +9,9 @@
 
     <ListView
         android:id="@+id/notificationsList"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"  />
 
-    <TextView 
-        android:id="@+id/notificationsRow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></TextView>
    
     
 </LinearLayout>
