--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:drawSelectorOnTop="false" />
+        android:transcriptMode="alwaysScroll"
+        android:drawSelectorOnTop="false"
+        android:stackFromBottom="true" />
       
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
