--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -14,6 +14,16 @@
         android:drawSelectorOnTop="false"
         android:stackFromBottom="true" />
       
+    <TextView
+        android:id="@+id/message_list_empty"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="No messages." />
+  
+
+    
+    
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
