--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -12,12 +12,12 @@
         android:layout_weight="1"
         android:drawSelectorOnTop="false" />
 
-   <!--     <TextView
+    <TextView
         android:id="@+id/friend_list_empty"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="You have no friends. Loser." />
-    -->
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="Add friends by entering their username and touching &apos;add friend&apos;." />
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
