--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="No messages." />
+        android:text="No messages....yet." />
   
 
     
@@ -36,7 +36,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="text"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:imeOptions="actionSend" />
 
         <Button
             android:id="@+id/bSend"
