--- a/res/layout/message_list_item.xml
+++ b/res/layout/message_list_item.xml
@@ -4,11 +4,19 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
     
+    <TextView
+            android:id="@+id/messageUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:layout_marginRight="10dp"
+            />
      <TextView 
         android:id="@+id/messageText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"></TextView>
+   
    
      
 </LinearLayout>
