--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -19,7 +19,8 @@
         android:layout_marginTop="5dip"
         android:layout_marginBottom="20dip"         
         android:singleLine="true"        
-        android:imeOptions="actionNext"/>
+        android:imeOptions="actionNext"
+        android:enabled="false"/>
 
     <TextView
         android:id="@+id/textView1"
