--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="No friends...yet. Add friends by entering their username and touching &apos;add friend&apos;." />
+            android:text="No friends...yet. Invite friends by entering their username and touching &apos;invite friend&apos;." />
 
         <TextView
             android:layout_width="match_parent"
@@ -51,7 +51,7 @@
             android:id="@+id/bAddFriend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="add friend" />
+            android:text="invite friend" />
     </LinearLayout>
 
 </LinearLayout>
