--- a/res/layout/activity_chat.xml
+++ b/res/layout/activity_chat.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatActivity" >
+    tools:context=".MainActivity" >
 
-    <fragment
-        android:id="@+id/friendsFragment"
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        class="com.twofours.surespot.friends.FriendFragment" />
+        android:layout_height="match_parent" >
+    </android.support.v4.view.ViewPager>
 
 </FrameLayout>
