--- a/res/layout/friend_list_item.xml
+++ b/res/layout/friend_list_item.xml
@@ -7,7 +7,7 @@
      <TextView 
         android:id="@+id/friendName"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_weight="1"></TextView>
   
    
