--- a/res/layout/message_list_item.xml
+++ b/res/layout/message_list_item.xml
@@ -14,7 +14,7 @@
      <TextView 
         android:id="@+id/messageText"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_weight="1"></TextView>
    
    
