--- a/res/layout/friend_list_item.xml
+++ b/res/layout/friend_list_item.xml
@@ -7,8 +7,11 @@
      <TextView 
         android:id="@+id/friendName"
         android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"></TextView>
+        android:layout_height="40sp"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="5sp"        
+        android:textSize="20sp"></TextView>
   
    
      
