--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -2,24 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
-    
+    android:orientation="vertical" >
+
     <TextView
-            android:id="@+id/messageUser"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="5dp"
-            android:gravity="right"
-            />
-     <TextView 
         android:id="@+id/messageText"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"></TextView>
-   
-   
-     
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="50dp"
+        android:gravity="right" >
+    </TextView>
+
 </LinearLayout>
