--- a/res/layout/activity_chat.xml
+++ b/res/layout/activity_chat.xml
@@ -2,13 +2,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    tools:context=".ChatActivity" >
 
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
+
+        <android.support.v4.view.PagerTitleStrip
+            android:id="@+id/pager_title_strip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:background="@color/abs__background_holo_dark"
+            android:paddingBottom="4dp"
+            android:paddingTop="4dp"
+            android:textColor="@color/abs__holo_blue_light" />
     </android.support.v4.view.ViewPager>
 
 </FrameLayout>
