--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dip"
-    tools:context=".SureSpot" >
+    tools:context=".LoginActivity" >
 
     <TextView
         android:id="@+id/textView2"
