--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dip"
-    tools:context=".SureSpot" >
+    tools:context=".SignupActivity" >
    
 
     <TextView
