--- a/res/layout/notification_list_item.xml
+++ b/res/layout/notification_list_item.xml
@@ -8,7 +8,9 @@
         android:id="@+id/notificationItemText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"></TextView>
+        android:layout_weight="1"
+        android:layout_marginLeft="5sp"        
+        android:textSize="20sp"></TextView>
      
      <Button
          android:id="@+id/notificationItemIgnore"
