--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="50dp"
-        android:gravity="left" />
+        android:gravity="left"
+        android:textSize="15sp" />
 
 </LinearLayout>
