--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -6,4 +6,11 @@
         android:showAsAction="never"
         android:title="@string/menu_settings"/>
 
+    <item
+        android:id="@+id/menu_close"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="close"/>
+    
+    
 </menu>
