--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:visibility="gone" >
 
         <TextView
             android:layout_width="match_parent"
@@ -29,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="You can swipe or click to navigate between tabs." />
+            android:text="Navigate between chat tabs by swiping." />
     </LinearLayout>
 
     <LinearLayout
