--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -19,7 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="Either you don&apos;t have any messages or they haven&apos;t been loaded yet." />
+        android:gravity="center"
+        android:text="no messages"
+        android:visibility="gone" />
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -32,14 +34,14 @@
             android:id="@+id/etMessage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"            
-            android:imeOptions="actionSend"            
+            android:layout_weight="1"
+            android:imeOptions="actionSend"
             android:width="0dp" />
 
         <Button
             android:id="@+id/bSend"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"            
+            android:layout_height="match_parent"
             android:text="send" />
     </LinearLayout>
 
