multi progress dialog

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -31,7 +31,14 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="Navigate between chat tabs by swiping." />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="This is early pre-beta software, your logins and (encrypted) data can and will be erased at any time. If this happens you will need to 'Clear data' for the surespot application in your phone." />
+                
     </LinearLayout>
+    
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
