--- a/res/menu/activity_chat.xml
+++ b/res/menu/activity_chat.xml
@@ -5,5 +5,12 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menu_settings"/>
+    
+    
+    <item
+        android:id="@+id/menu_close"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom"
+        android:title="close"/>
 
 </menu>
