--- a/res/menu/activity_chat.xml
+++ b/res/menu/activity_chat.xml
@@ -1,12 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:id="@+id/menu_settings"
+      <item
+        android:id="@+id/menu_close"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/menu_settings"/>
-    
-    
+        android:title="close"/>
     <item
         android:id="@+id/menu_close"
         android:orderInCategory="100"
