--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,14 +20,12 @@
         android:orientation="vertical"
         android:visibility="gone" >
 
-          <TextView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="Welcome to surespot. Messages sent using this software are end to end encrypted using 256 bit AES and 512+ bit ECC encryption. Enjoy." />
 
-     
-        
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,14 +37,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="Navigate between chat tabs by swiping." />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="This is early pre-beta software, your logins and encrypted conversatations can and probably will be erased at any time. If this happens you will need to 'Clear data' for the surespot application in your phone." />
-                
+            android:text="This is early pre-beta software, your logins and encrypted conversatations can and probably will be erased at any time. If this happens you will need to &apos;Clear data&apos; for the surespot application in your phone." />
     </LinearLayout>
-    
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
