--- a/res/layout/main_friend_item.xml
+++ b/res/layout/main_friend_item.xml
@@ -1,18 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/friendItemLayout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
-    
-     <TextView 
+
+    <TextView
         android:id="@+id/friendName"
         android:layout_width="0dp"
-        android:layout_height="50sp"
-        android:layout_weight="1"  
+        android:layout_height="50dp"
+        android:layout_marginLeft="5dp"
+        android:layout_weight="1"
         android:gravity="center_vertical"
-        android:layout_marginLeft="5sp"        
-        android:textSize="20sp"></TextView>
-  
-   
-     
+        android:textSize="20sp" >
+    </TextView>
+
+    <View
+        android:id="@+id/newMessage"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/circle_shape"
+        android:visibility="gone" >
+    </View>
+    
+        <View
+        android:id="@+id/newFriend"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/circle_shape"
+        android:visibility="gone" >
+    </View>
+    
+            <View
+        android:id="@+id/activeChat"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/circle_shape"
+        android:visibility="gone" >
+    </View>
+
 </LinearLayout>
