--- a/res/layout/main_friend_item.xml
+++ b/res/layout/main_friend_item.xml
@@ -16,33 +16,33 @@
     </TextView>
 
     <View
-        android:id="@+id/newMessage"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_gravity="center"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/circle_shape"
-        android:visibility="gone" >
-    </View>
-    
-        <View
         android:id="@+id/newFriend"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_gravity="center"
         android:layout_marginRight="10dp"
-        android:background="@drawable/circle_shape"
-        android:visibility="gone" >
+        android:background="@drawable/orange_circle_shape"
+        android:visibility="invisible" >
     </View>
-    
-            <View
+
+    <View
         android:id="@+id/activeChat"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_gravity="center"
         android:layout_marginRight="10dp"
-        android:background="@drawable/circle_shape"
-        android:visibility="gone" >
+        android:background="@drawable/blue_circle_shape"
+        android:visibility="invisible" >
+    </View>
+
+    <View
+        android:id="@+id/newMessage"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/green_circle_shape"
+        android:visibility="invisible" >
     </View>
 
 </LinearLayout>
