--- a/res/layout/main_friend_item.xml
+++ b/res/layout/main_friend_item.xml
@@ -9,10 +9,10 @@
         android:id="@+id/friendName"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="15dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:textSize="20sp" >
+        android:textSize="30sp" >
     </TextView>
 
     <View
@@ -37,12 +37,13 @@
 
     <TextView
         android:id="@+id/newMessageCount"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginRight="10dp"
-        android:background="@drawable/green_circle_shape"
-        android:visibility="invisible" >
+        android:gravity="center"
+        android:textSize="30sp"
+        android:textStyle="bold|italic" >
     </TextView>
 
 </LinearLayout>
