--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -3,8 +3,7 @@
     android:id="@+id/chat_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-     >
+    android:orientation="vertical" >
 
     <ListView
         android:id="@+id/message_list"
@@ -12,10 +11,10 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:drawSelectorOnTop="false"
-        android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll" 
         android:paddingLeft="2dp"
-        android:paddingRight="2dp"/>
+        android:paddingRight="2dp"
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll" />
 
     <TextView
         android:id="@+id/message_list_empty"
@@ -39,7 +38,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:imeOptions="actionSend"
-            android:width="0dp" />
+            android:width="0dp" >            
+        </EditText>
 
         <Button
             android:id="@+id/bSend"
