message sent notification

--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -2,16 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
+
+    <View
+        android:id="@+id/messageSending"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/btn_check_buttonless_off"
+        android:visibility="visible"
+        android:layout_gravity="center" >
+    </View>
+
+    <View
+        android:id="@+id/messageSent"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/btn_check_buttonless_on"
+        android:visibility="gone" 
+        android:layout_gravity="center">
+    </View>
 
     <TextView
         android:id="@+id/messageText"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="50dp"
+        android:layout_marginTop="2dp"
         android:gravity="left"
         android:textSize="15sp" />
 
