--- a/res/layout/main_friend_item.xml
+++ b/res/layout/main_friend_item.xml
@@ -5,41 +5,30 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/friendName"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="15dp"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:textSize="30sp" >
-    </TextView>
-
     <LinearLayout
-        android:id="@+id/friendLayout"
-        android:layout_width="wrap_content"
+        android:id="@+id/statusLayout"
+        android:layout_width="0dp"
+        android:minHeight="50dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <View
-            android:id="@+id/newFriend"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/orange_circle_shape"
-            android:visibility="invisible" >
-        </View>
+        android:layout_weight="1"
+        android:orientation="vertical" 
+        android:layout_marginLeft="15dp">
 
         <TextView
-            android:id="@+id/newMessageCount"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="10dp"
-            android:gravity="center"
-            android:textSize="30sp"
-            android:textStyle="bold|italic" >
+            android:id="@+id/friendName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"            
+            android:textSize="30sp" >
+
+        </TextView>
+         <TextView
+            android:id="@+id/friendStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp" 
+            android:layout_gravity="center_vertical"                                              
+            android:textSize="20sp" >
         </TextView>
     </LinearLayout>
 
@@ -47,7 +36,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/inviteLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:orientation="horizontal" >
 
         <Button
