--- a/res/drawable/empty_blue_circle.xml
+++ b/res/drawable/empty_blue_circle.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="oval" >
+
+    <solid android:color="@android:color/background_light" />
 
     <stroke
-        android:width="1dp"
+        android:width="3dp"
         android:color="@color/abs__holo_blue_light" >
     </stroke>
-   </shape>
-   
+
+</shape>
