--- a/res/drawable/filled_blue_rectangle.xml
+++ b/res/drawable/filled_blue_rectangle.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <stroke
-        android:width="1dp"
-        android:color="@color/abs__holo_blue_light" >
-    </stroke>
-   </shape>
-   
+
+    <solid android:color="@color/abs__holo_blue_light">
+    </solid>
+
+</shape>
