--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -1,51 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/chat_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
     <ListView
         android:id="@+id/message_list"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/etMessage"        
         android:drawSelectorOnTop="false"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"
         android:stackFromBottom="true"
         android:transcriptMode="alwaysScroll" />
 
     <TextView
         android:id="@+id/message_list_empty"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_width="fill_parent"        
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/etMessage"
         android:gravity="center"
         android:text="no messages"
         android:visibility="gone" />
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/etMessage"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal" >
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/bSend"
+        android:imeOptions="actionSend"
+        android:maxHeight="150sp"
+        android:minHeight="45sp" >
+    </EditText>
 
-        <EditText
-            android:id="@+id/etMessage"
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="1"
-            android:imeOptions="actionSend"
-            android:gravity="bottom">            
-        </EditText>
+    <Button
+        android:id="@+id/bSend"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="-10sp"
+        android:background="@drawable/empty_blue_circle"
+        android:text="send" />
 
-        <Button
-            android:id="@+id/bSend"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="send" />
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
