--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -6,20 +6,20 @@
 
     <View
         android:id="@+id/messageSending"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/btn_check_buttonless_off"
-        android:visibility="visible"
-        android:layout_gravity="center" >
+        android:layout_width="3dp"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/empty_blue_rectangle"
+        android:visibility="visible" >
     </View>
 
     <View
         android:id="@+id/messageSent"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/btn_check_buttonless_on"
-        android:visibility="gone" 
-        android:layout_gravity="center">
+        android:layout_width="3dp"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/filled_blue_rectangle"
+        android:visibility="gone" >
     </View>
 
     <TextView
@@ -30,23 +30,18 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="2dp"
-        android:gravity="left"
-        android:visibility="gone"
-        android:textSize="15sp" />
-    
-    
+        android:textSize="15sp"
+        android:visibility="gone" />
+
     <ImageView
-    android:id="@+id/messageImage"
+        android:id="@+id/messageImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="2dp"
-        android:gravity="left"
-        android:visibility="visible"
         android:adjustViewBounds="true"
-         />
-    
+        android:visibility="visible" />
 
 </LinearLayout>
