set isloading false on text message load

--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -23,7 +23,7 @@
         android:layout_marginRight="55dp"
         android:layout_marginTop="2dp"
         android:textSize="15sp"
-        android:visibility="gone" >
+        android:visibility="visible" >
     </TextView>
 
     <ImageView
