--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -11,7 +11,8 @@
         android:layout_above="@+id/etMessage"        
         android:drawSelectorOnTop="false"
         android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll" />
+        android:smoothScrollbar="true"
+        android:transcriptMode="normal" />
 
     <TextView
         android:id="@+id/message_list_empty"
