--- a/res/layout/activity_chat.xml
+++ b/res/layout/activity_chat.xml
@@ -1,24 +1,28 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"    
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
     tools:context=".ChatActivity" >
 
+    <com.viewpagerindicator.TitlePageIndicator
+        android:id="@+id/indicator"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="2dp"
+        android:background="@color/abs__background_holo_dark"
+        app:footerIndicatorStyle="none"
+        app:footerLineHeight="0dp"
+        app:selectedBold="true"
+        app:selectedColor="#FFCC0000"
+        android:textSize="20sp"
+        android:gravity="top" />
+
     <android.support.v4.view.ViewPager
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
-        <android.support.v4.view.PagerTitleStrip
-            android:id="@+id/pager_title_strip"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:background="@color/abs__background_holo_dark"
-            android:paddingBottom="4dp"
-            android:paddingTop="4dp"
-            android:textColor="@color/abs__holo_blue_light" />
-    </android.support.v4.view.ViewPager>
-
-</FrameLayout>
+</LinearLayout>
