--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -51,8 +51,8 @@
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2sp"
-        android:layout_marginTop="2dp"        
-        android:minHeight="240dp"
+        android:layout_marginTop="2dp"
+        android:adjustViewBounds="true"
         android:visibility="gone" />
 
 </LinearLayout>
