--- a/res/drawable/empty_blue_rectangle.xml
+++ b/res/drawable/empty_blue_rectangle.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/abs__holo_blue_light" >
+        android:color="#FFBBBBBB" >
     </stroke>
    </shape>
    
