--- a/res/layout/actionbar_title.xml
+++ b/res/layout/actionbar_title.xml
@@ -2,24 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" 
-    android:paddingBottom="4dp">
+    android:orientation="horizontal"
+    android:paddingBottom="2dp" >
 
     <TextView
         android:id="@+id/nav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:maxLines="1"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
-         >
+        android:textSize="20sp" >
     </TextView>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="1dp"
         android:layout_gravity="center"
+        android:layout_marginLeft="1dp"
         android:text="/"
         android:textColor="@android:color/white"
         android:textSize="20sp" >
@@ -30,6 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:maxLines="1"
         android:textColor="#FFBBBBBB"
         android:textSize="20sp"
         android:textStyle="bold" >
