--- a/res/layout/activity_friend.xml
+++ b/res/layout/activity_friend.xml
@@ -9,8 +9,15 @@
         android:id="@+id/main_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
         android:layout_weight="1"
-         />
+        android:visibility="gone" />
 
     <LinearLayout
         android:id="@+id/main_list_empty"
