logout menu on chat activity

--- a/res/menu/activity_chat.xml
+++ b/res/menu/activity_chat.xml
@@ -40,5 +40,12 @@
         android:orderInCategory="200"
         android:showAsAction="ifRoom|withText"
         android:title="settings"/>
+    
+    
+     <item
+        android:id="@+id/menu_logout"
+        android:orderInCategory="400"
+        android:showAsAction="ifRoom|withText"
+        android:title="logout"/>
 
 </menu>
