prompt user for password on identity import and export validate identity import and export against server remove credentials from cache on logout

--- a/res/layout/activity_import_identity.xml
+++ b/res/layout/activity_import_identity.xml
@@ -5,17 +5,15 @@
     android:orientation="vertical"
     tools:context=".ImportIdentityActivity" >
 
+    <TextView
+        android:id="@+id/foundText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <ListView
         android:id="@+id/lvIdentities"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </ListView>
-
-    <Button
-        android:id="@+id/bImportSd"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/import_sd" >
-    </Button>
 
 </LinearLayout>
